--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/PL4.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/PL4.config
@@ -4,8 +4,8 @@
 		<section name="kCura.Config" type="System.Configuration.DictionarySectionHandler, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 	</configSections>
 	<appSettings>
+		<add key="ServerBindingType" value="https" />
 		<add key="RelativityInstanceAddress" value="il1ddmlpl4wb001.kcura.corp" />
-		<add key="RelativityWebAddress" value="il1ddmlpl4wb001.kcura.corp" />
 
 		<add key="AdminUsername" value="your.name@relativity.com" />
 		<add key="AdminPassword" value="Test1234!" />
