--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/testvm.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/testvm.config
@@ -4,11 +4,11 @@
 		<section name="kCura.Config" type="System.Configuration.DictionarySectionHandler, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 	</configSections>
 	<appSettings>
-		<add key="RelativityInstanceAddress" value="rdc4test.kcura.corp" />
-		<add key="RelativityWebAddress" value="rdc4test.kcura.corp" />
+		<add key="ServerBindingType" value="https" />
+		<add key="RelativityInstanceAddress" value="[YOUR VM].kcura.corp" />
 
 		<add key="UI.UseTapiForFileCopy" value="false"/>
-		<add key="fileshareLocation" value="\\rdc4test\fileshare"/>
+		<add key="fileshareLocation" value="\\[YOUR VM]\fileshare"/>
 
 		<add key="AdminUsername" value="relativity.admin@kcura.com" />
 		<add key="AdminPassword" value="Test1234!" />
