--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Prod.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Prod.config
@@ -4,8 +4,9 @@
 		<section name="kCura.Config" type="System.Configuration.DictionarySectionHandler, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 	</configSections>
 	<appSettings>
-		<add key="RelativityInstanceAddress" value="reg-prod-services.r1.kcura.com" />		
-		<add key="RelativityWebAddress" value="reg-prod.r1.kcura.com" />
+		<add key="ServerBindingType" value="https" />
+		<add key="RelativityInstanceAddress" value="reg-prod.r1.kcura.com" />
+		<add key="RSAPIServerAddress" value="reg-prod-services.r1.kcura.com"/>
 
 		<add key="AdminUsername" value="your.name@relativity.com" />
 		<add key="AdminPassword" value="Test1234!" />
