--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Regression-B.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Regression-B.config
@@ -4,11 +4,12 @@
 		<section name="kCura.Config" type="System.Configuration.DictionarySectionHandler, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 	</configSections>
 	<appSettings>
-		<add key="RelativityInstanceAddress" value="reg-b-services.r1.kcura.com" />		
-		<add key="RelativityWebAddress" value="reg-b.r1.kcura.com" />
+		<add key="ServerBindingType" value="https" />
+		<add key="RelativityInstanceAddress" value="reg-b.r1.kcura.com" />
+		<add key="RSAPIServerAddress" value="reg-b-services.r1.kcura.com"/>
 
-		<add key="AdminUsername" value="michal.pawlus@relativity.com" />
-		<add key="AdminPassword" value="Test123#" />
+		<add key="AdminUsername" value="your.name@relativity.com" />
+		<add key="AdminPassword" value="Test1234!" />
 
 		<!--
 		If non-empty, this workspace will be used in tests instead of new one.
