fixed reg-prod-update UI tests config

--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Prod-Update.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Prod-Update.config
@@ -5,8 +5,8 @@
 	</configSections>
 	<appSettings>
 		<add key="ServerBindingType" value="https" />
-		<add key="RelativityInstanceAddress" value="regression-b.r1.kcura.com" />
-		<add key="RSAPIServerAddress" value="regression-b-services.r1.kcura.com"/>
+		<add key="RelativityInstanceAddress" value="reg-prod-update.r1.kcura.com" />
+		<add key="RSAPIServerAddress" value="reg-prod-update-services.r1.kcura.com"/>
 
 		<add key="AdminUsername" value="your.name@relativity.com" />
 		<add key="AdminPassword" value="Test1234!" />
