REL-286254 tests improvements

--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Zero.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Zero.config
@@ -4,11 +4,11 @@
 		<section name="kCura.Config" type="System.Configuration.DictionarySectionHandler, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 	</configSections>
 	<appSettings>
-		<add key="ProtocolVersion" value="https" />
-		<add key="RelativityInstanceAddress" value="reg-zero-services.r1.kcura.com" />		
-		<add key="RelativityWebAddress" value="reg-zero.r1.kcura.com" />
+		<add key="ServerBindingType" value="https" />
+		<add key="RelativityInstanceAddress" value="reg-zero.r1.kcura.com" />		
+		<add key="RSAPIServerAddress" value="reg-zero-services.r1.kcura.com" />
 
-		<add key="AdminUsername" value="michal.pawlus@relativity.com" />
+		<add key="AdminUsername" value="your.name@relativity.com" />
 		<add key="AdminPassword" value="Test123#" />
 		
 		<!--
