--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/cop001.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/cop001.config
@@ -4,9 +4,8 @@
 		<section name="kCura.Config" type="System.Configuration.DictionarySectionHandler, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 	</configSections>
 	<appSettings>
-		<add key="ProtocolVersion" value="https" />
+		<add key="ServerBindingType" value="https" />
 		<add key="RelativityInstanceAddress" value="il1ddmlplcop001.kcura.corp" />
-		<add key="RelativityWebAddress" value="il1ddmlplcop001.kcura.corp" />
 
 		<add key="UI.UseTapiForFileCopy" value="false"/>
 		<add key="fileshareLocation" value="\\il1ddmlplcop001\FileShare"/>
