--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Prod-Update.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Prod-Update.config
@@ -4,13 +4,12 @@
 		<section name="kCura.Config" type="System.Configuration.DictionarySectionHandler, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 	</configSections>
 	<appSettings>
-		<add key="ProtocolVersion" value="https" />
-		<add key="RelativityInstanceAddress" value="reg-prod-update-services.r1.kcura.com" />		
-		<add key="RelativityWebAddress" value="reg-prod-update.r1.kcura.com" />
+		<add key="ServerBindingType" value="https" />
+		<add key="RelativityInstanceAddress" value="reg-prod-update.r1.kcura.com" />
+		<add key="RSAPIServerAddress" value="reg-prod-update-services.r1.kcura.com"/>
 
-		<add key="AdminUsername" value="michal.pawlus@relativity.com" />
+		<add key="AdminUsername" value="your.user@relativity.com" />
 		<add key="AdminPassword" value="Test123#" />
-
 		<add key="UI.SkipUserCreation" value="false" />
 		
 		<!--
