Add system tests for JobHistoryHelper

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -4,23 +4,23 @@
 		<section name="kCura.Config" type="System.Configuration.DictionarySectionHandler, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 	</configSections>
 	<kCura.Config>
-		<add key="connectionString" value="data source=CD-SUT-COV1JK8Z\EDDSINSTANCE001;initial catalog=EDDS;persist security info=False;user id=MOJUSER;password=MOJEHASLO; workstation id=localhost;packet size=4096" />
+		<add key="connectionString" value="data source=p-dv-dm-pste\EDDSINSTANCE001;initial catalog=EDDS;persist security info=False;user id=eddsdbo;password=MySqlPassword123; workstation id=p-dv-vm-pste;packet size=4096" />
 	</kCura.Config>
 	<appSettings>
 		
 		<!-- Set by jeeves on CI -->
 		<add key="ServerBindingType" value="https" />
-		<!-- change to <add key="RelativityInstanceAddress" value="your_testvm.kcura.corp" />-->
+		<!-- change <add key="RelativityInstanceAddress" value="your_testvm.kcura.corp" />-->
 
-		<add key="RelativityInstanceAddress" value="localhost" />
-		<add key="SQLServerAddress" value="localhost\EDDSINSTANCE001" />
+		<add key="RelativityInstanceAddress" value="p-dv-vm-pste.kcura.corp" />
+		<add key="SQLServerAddress" value="p-dv-vm-pste\EDDSINSTANCE001" />
 
 		<!-- If empty, application uses the value of RelativityInstanceAddress -->
 		<add key="targetDbHost" value="" />
 		<add key="RESTServerAddress" value="" />
 		<add key="RSAPIServerAddress" value="" />
 		
-		<add key="AdminUsername" value="relativity.admin@kcura.com" />
+		<add key="AdminUsername" value="relativity.admin@relativity.com" />
 		<add key="AdminPassword" value="Test1234!" />
 		<add key="relativityUserFirstName" value="Relativity" />
 		<add key="relativityUserLastName" value="Admin" />
@@ -56,7 +56,7 @@
 		<add key="DestinationPath" value="c:\RIP_ExportTest" />
 		<add key="InputFolder" value="c:\RIP_ImportTest" />
 		<add key="UseLocalRAP" value="true" />
-		<add key="LocalRAPFileLocation" value="..\Applications\RelativityIntegrationPoints.Auto.rap" />
+		<add key="LocalRAPFileLocation" value="C:\SourceCode\integrationpoints\Applications\RelativityIntegrationPoints.Auto.rap" />
 		<add key="JenkinsBuildUseIPRapFile" value="JenkinsUseIPRapFile" />
 		<add key="UseLegacyTemplateName" value="JenkinsUseLegacyTemplateNameInTests" />
 		<add key="CustomizedConfigurationOverridesLocation" value="S:\Sourcecode\RIP.Tests.Custom.config"/>
