--- a/Source/kCura.IntegrationPoints.RelativitySync.Tests/kCura.IntegrationPoints.RelativitySync.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.RelativitySync.Tests/kCura.IntegrationPoints.RelativitySync.Tests.csproj
@@ -17,5 +17,8 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\kCura.IntegrationPoints.RelativitySync\kCura.IntegrationPoints.RelativitySync.csproj" />
+  </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
