--- a/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
+++ b/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
@@ -190,10 +190,11 @@
     <Compile Include="Models\RelativityProviderModel.cs" />
     <Compile Include="Models\SchedulerModel.cs" />
     <Compile Include="Models\Shared\ImagePrecedence.cs" />
-    <Compile Include="TestCategories\SmokeTestAttribute.cs" />
-    <Compile Include="TestCategories\SmokeTestsAttribute.cs" />
+    <Compile Include="TestCategories\TestQuarantineState.cs" />
+    <Compile Include="TestCategories\Attributes\SmokeTestAttribute.cs" />
+    <Compile Include="TestCategories\Attributes\SmokeTestsAttribute.cs" />
     <Compile Include="TestCategories\TestCategories.cs" />
-    <Compile Include="TestCategories\TestInQuarantineAttribute.cs" />
+    <Compile Include="TestCategories\Attributes\TestInQuarantineAttribute.cs" />
     <Compile Include="TestDbContext.cs" />
     <Compile Include="TestException.cs" />
     <Compile Include="Permission.cs" />
