Corrected build path and psake-build script to proper values

--- a/Source/kCura.IntegrationPoints.RelativitySync.Tests.Integration/kCura.IntegrationPoints.RelativitySync.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.RelativitySync.Tests.Integration/kCura.IntegrationPoints.RelativitySync.Tests.Integration.csproj
@@ -11,6 +11,12 @@
     <Platforms>AnyCPU;x64</Platforms>
     <NoWarn>NU1605</NoWarn>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutputPath>bin\x64\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutputPath>bin\x64\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\..\Version\AssemblyInfo.cs" Link="Properties\AssemblyInfo.cs" />
   </ItemGroup>
