--- a/.gitignore
+++ b/.gitignore
@@ -84,12 +84,11 @@ IntegrationTestsResults.html
 UITestsResults.xml
 UITestsResults.html
 DevelopmentScripts/IntegrationPointsTests.config
-DevelopmentScripts/IntegrationTestsResults.xml
-DevelopmentScripts/IntegrationTestsResults.html
-DevelopmentScripts/UITestsResults.xml
-DevelopmentScripts/UITestsResults.html
+DevelopmentScripts/*Results.xml
+DevelopmentScripts/*Results.html
 /DevelopmentScripts/ValidationMessages.html
 /DevelopmentScripts/.sonarqube
 /.sonarqube
 /DevelopmentScripts/MSBuild.SonarQube.Runner.Tool/tools
 /DevelopmentScripts/chromeLog.txt
+Artifacts
