skip user creation

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -68,6 +68,7 @@
 		<!-- Total time to wait for page to load -->
 		<add key="ui.waitForPageInSec" value="90" />
 		<add key="UI.TimeoutMultiplier" value="2.0" />
+		<add key="UI.SkipUserCreation" value="true" />
 
 		<!-- Values for all WebDrivers -->
 		<!-- Acceptable values: chrome, firefox -->
