REL-282014 [SYNC] Create adapter for Notification

--- a/Source/kCura.IntegrationPoints.RelativitySync/kCura.IntegrationPoints.RelativitySync.csproj
+++ b/Source/kCura.IntegrationPoints.RelativitySync/kCura.IntegrationPoints.RelativitySync.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kCura.IntegrationPoints.Core\kCura.IntegrationPoints.Core.csproj" />
+    <ProjectReference Include="..\kCura.IntegrationPoints.Email\kCura.IntegrationPoints.Email.csproj" />
     <ProjectReference Include="..\kCura.ScheduleQueue.Core\kCura.ScheduleQueue.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
