--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -63,6 +63,7 @@
 		<!-- Total time to wait for page to load -->
 		<add key="ui.waitForPageInSec" value="90" />
 		<add key="UI.TimeoutMultiplier" value="1.0" />
+		<add key="UI.UseTapiForFileCopy" value="true"/>
 		<add key="UI.SkipUserCreation" value="true" />
 
 		<!-- Values for ChromeDriver Creation -->
