add ftp server to app.config

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -38,6 +38,10 @@
 		<add key="ldapUsername" value="kcura\tv" />
 		<add key="ldapPassword" value="kCuraM0bileTelevision$" />
 
+		<add key="ftpConnectionPath" value="IL1DDMLPL3AG001.kcura.corp" />
+		<add key="ftpUsername" value="ftpuser" />
+		<add key="ftpPassword" value="ftppass" />
+
 	  <add key="UI.TemplateWorkspace" value="Relativity Starter Template" />
 
 		<add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" />
