--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -11,9 +11,8 @@
 		<add key="ServerBindingType" value="https" />
 		
 		<!-- change to <add key="RelativityInstanceAddress" value="your_testvm.kcura.corp" />-->
-
-		<add key="RelativityInstanceAddress" value="p-dv-vm-inn0shy.kcura.corp" />
-		<add key="SQLServerAddress" value="p-dv-vm-inn0shy.kcura.corp\EDDSINSTANCE001" />
+		<add key="RelativityInstanceAddress" value="localhost" />
+		<add key="SQLServerAddress" value="localhost\EDDSINSTANCE001" />
 
 	  <!-- If empty, application uses the value of RelativityInstanceAddress -->
 		<add key="targetDbHost" value="" />
@@ -55,7 +54,7 @@
 		<add key="DestinationPath" value="c:\RIP_ExportTest" />
 		<add key="InputFolder" value="c:\RIP_ImportTest" />
 		<add key="UseLocalRAP" value="true" />
-		<add key="LocalRAPFileLocation" value="S:\git\rip\integrationpoints\Applications\RelativityIntegrationPoints.Auto.rap" />
+		<add key="LocalRAPFileLocation" value="..\Applications\RelativityIntegrationPoints.Auto.rap" />
 		<add key="JenkinsBuildUseIPRapFile" value="JenkinsUseIPRapFile" />
 		<add key="UseLegacyTemplateName" value="JenkinsUseLegacyTemplateNameInTests" />
 		<add key="CustomizedConfigurationOverridesLocation" value="S:\Sourcecode\RIP.Tests.Custom.config"/>
