--- a/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
+++ b/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Models\RelativityProviderModel.cs" />
     <Compile Include="Models\SchedulerModel.cs" />
     <Compile Include="Models\Shared\ImagePrecedence.cs" />
+    <Compile Include="TestCategories\Attributes\StressTestAttribute.cs" />
     <Compile Include="TestCategories\TestQuarantineState.cs" />
     <Compile Include="TestCategories\Attributes\SmokeTestAttribute.cs" />
     <Compile Include="TestCategories\TestCategories.cs" />
