Add key class and some more try/catch

--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Services\SessionService.cs" />
     <Compile Include="SignalRHubs\IntegrationPointDataHubInput.cs" />
     <Compile Include="SignalRHubs\IntegrationPointDataHub.cs" />
+    <Compile Include="SignalRHubs\IntegrationPointDataHubKey.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Services\WebApiCustomPageService.cs" />
     <Compile Include="WebClientFactory.cs" />
