--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -74,7 +74,14 @@
     <Compile Include="Attributes\JsonNetResult.cs" />
     <Compile Include="Attributes\WebAPIFilterException.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="Services\ControllerCustomPageService.cs" />
+    <Compile Include="Logging\IWebCorrelationContextProvider.cs" />
+    <Compile Include="Logging\LoggingInstaller.cs" />
+    <Compile Include="RelativityServices\RelativityServicesInstaler.cs" />
+    <Compile Include="Services\ServicesInstaller.cs" />
+    <Compile Include="WorkspaceIdProvider\Services\IContextService.cs" />
+    <Compile Include="WorkspaceIdProvider\SessionServiceFactory.cs" />
+    <Compile Include="WorkspaceIdProvider\WorkspaceIdProviderInstaller.cs" />
+    <Compile Include="WorkspaceIdProvider\Services\ControllerCustomPageService.cs" />
     <Compile Include="Controllers\API\ExportSettingsValidationController.cs" />
     <Compile Include="Controllers\API\FieldCatalogController.cs" />
     <Compile Include="Controllers\API\ImportPreviewController.cs" />
@@ -126,12 +133,12 @@
     </Compile>
     <Compile Include="GridModelFactory.cs" />
     <Compile Include="HelperConfigSqlServiceFactoryWrapper.cs" />
-    <Compile Include="Helpers\CacheHolder.cs" />
+    <Compile Include="Logging\CacheHolder.cs" />
     <Compile Include="Helpers\SummaryPageSelector.cs" />
     <Compile Include="Installers\ControllerInstaller.cs" />
     <Compile Include="Controllers\IntegrationPointProfilesController.cs" />
-    <Compile Include="IRelativityUrlHelper.cs" />
-    <Compile Include="Helpers\ICacheHolder.cs" />
+    <Compile Include="Helpers\IRelativityUrlHelper.cs" />
+    <Compile Include="Logging\ICacheHolder.cs" />
     <Compile Include="Logging\WebActionContext.cs" />
     <Compile Include="Logging\WebActionContextProvider.cs" />
     <Compile Include="MessageHandlers\CorrelationIdHandler.cs" />
@@ -139,8 +146,8 @@
     <Compile Include="Models\FtpProviderSummaryPageSettingsModel.cs" />
     <Compile Include="Models\IntegrationPointTypeModel.cs" />
     <Compile Include="Models\IpDetailModel.cs" />
-    <Compile Include="Services\Exceptions\BaseCpHelperCannotBeTypeOfRetriableCpHelperException.cs" />
-    <Compile Include="Services\RetriableCPHelperProxy.cs" />
+    <Compile Include="WorkspaceIdProvider\Services\Exceptions\BaseCpHelperCannotBeTypeOfRetriableCpHelperException.cs" />
+    <Compile Include="RelativityServices\RetriableCPHelperProxy.cs" />
     <Compile Include="Services\ISessionService.cs" />
     <Compile Include="Models\LdapProviderSummaryPageSettingsModel.cs" />
     <Compile Include="Models\SavedSearchModel.cs" />
@@ -154,17 +161,17 @@
     <Compile Include="Models\Validation\ValidationResultDTO.cs" />
     <Compile Include="Models\Validation\ValidationResultMapper.cs" />
     <Compile Include="Models\WorkspaceModel.cs" />
-    <Compile Include="Providers\Exceptions\WorkspaceIdNotFoundException.cs" />
-    <Compile Include="Providers\WorkspaceIdProvider.cs" />
-    <Compile Include="Providers\IWorkspaceIdProvider.cs" />
-    <Compile Include="RelativityUrlHelper.cs" />
+    <Compile Include="RelativityServices\Exceptions\WorkspaceIdNotFoundException.cs" />
+    <Compile Include="WorkspaceIdProvider\WorkspaceIdProvider.cs" />
+    <Compile Include="WorkspaceIdProvider\IWorkspaceIdProvider.cs" />
+    <Compile Include="Helpers\RelativityUrlHelper.cs" />
     <Compile Include="RequestExtensions.cs" />
     <Compile Include="ServiceContextHelperForWeb.cs" />
     <Compile Include="Services\SessionService.cs" />
     <Compile Include="SignalRHubs\IntegrationPointDataHubInput.cs" />
     <Compile Include="SignalRHubs\IntegrationPointDataHub.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="Services\WebApiCustomPageService.cs" />
+    <Compile Include="WorkspaceIdProvider\Services\WebApiCustomPageService.cs" />
     <Compile Include="WebClientFactory.cs" />
     <Compile Include="WindsorCompositionRoot.cs" />
     <Compile Include="WindsorControllerFactory.cs" />
