--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -72,17 +72,20 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Attributes\LogApiExceptionFilterAttribute.cs" />
     <Compile Include="Attributes\JsonNetResult.cs" />
-    <Compile Include="Attributes\WebAPIFilterException.cs" />
+    <Compile Include="Context\ContextInstaller.cs" />
+    <Compile Include="Helpers\HelpersInstaller.cs" />
+    <Compile Include="Infrastructure\ExceptionLoggers\WebAPIExceptionLogger.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="Logging\IWebCorrelationContextProvider.cs" />
-    <Compile Include="Logging\LoggingInstaller.cs" />
-    <Compile Include="MessageHandlers\MessageHandlersInstaller.cs" />
+    <Compile Include="IntegrationPointsServices\IntegrationPointsServicesInstaller.cs" />
+    <Compile Include="Installers\ContainerInstaller.cs" />
+    <Compile Include="IntegrationPointsServices\Logging\IWebCorrelationContextProvider.cs" />
+    <Compile Include="IntegrationPointsServices\Logging\LoggingInstaller.cs" />
+    <Compile Include="Infrastructure\InfrastructureInstaller.cs" />
     <Compile Include="RelativityServices\RelativityServicesInstaler.cs" />
-    <Compile Include="InfrastructureServices\InfrastructureServicesInstaller.cs" />
-    <Compile Include="WorkspaceIdProvider\Services\IContextService.cs" />
-    <Compile Include="InfrastructureServices\SessionServiceFactory.cs" />
-    <Compile Include="WorkspaceIdProvider\WorkspaceIdProviderInstaller.cs" />
-    <Compile Include="WorkspaceIdProvider\Services\ControllerCustomPageService.cs" />
+    <Compile Include="Context\WorkspaceIdProvider\Services\IContextService.cs" />
+    <Compile Include="Infrastructure\Session\SessionServiceFactory.cs" />
+    <Compile Include="Context\WorkspaceIdProvider\WorkspaceIdProviderInstaller.cs" />
+    <Compile Include="Context\WorkspaceIdProvider\Services\ControllerCustomPageService.cs" />
     <Compile Include="Controllers\API\ExportSettingsValidationController.cs" />
     <Compile Include="Controllers\API\FieldCatalogController.cs" />
     <Compile Include="Controllers\API\ImportPreviewController.cs" />
@@ -132,22 +135,22 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="HelperConfigSqlServiceFactoryWrapper.cs" />
-    <Compile Include="Logging\CacheHolder.cs" />
+    <Compile Include="IntegrationPointsServices\Logging\CacheHolder.cs" />
     <Compile Include="Helpers\SummaryPageSelector.cs" />
-    <Compile Include="Installers\ControllerInstaller.cs" />
+    <Compile Include="Installers\ControllersInstaller.cs" />
     <Compile Include="Controllers\IntegrationPointProfilesController.cs" />
     <Compile Include="Helpers\IRelativityUrlHelper.cs" />
-    <Compile Include="Logging\ICacheHolder.cs" />
-    <Compile Include="Logging\WebActionContext.cs" />
-    <Compile Include="Logging\WebActionContextProvider.cs" />
-    <Compile Include="MessageHandlers\CorrelationIdHandler.cs" />
+    <Compile Include="IntegrationPointsServices\Logging\ICacheHolder.cs" />
+    <Compile Include="IntegrationPointsServices\Logging\WebActionContext.cs" />
+    <Compile Include="IntegrationPointsServices\Logging\WebActionContextProvider.cs" />
+    <Compile Include="Infrastructure\MessageHandlers\CorrelationIdHandler.cs" />
     <Compile Include="Models\EditPoint.cs" />
     <Compile Include="Models\FtpProviderSummaryPageSettingsModel.cs" />
     <Compile Include="Models\IntegrationPointTypeModel.cs" />
     <Compile Include="Models\IpDetailModel.cs" />
-    <Compile Include="WorkspaceIdProvider\Services\Exceptions\BaseCpHelperCannotBeTypeOfRetriableCpHelperException.cs" />
+    <Compile Include="Context\WorkspaceIdProvider\Services\Exceptions\BaseCpHelperCannotBeTypeOfRetriableCpHelperException.cs" />
     <Compile Include="RelativityServices\RetriableCPHelperProxy.cs" />
-    <Compile Include="InfrastructureServices\ISessionService.cs" />
+    <Compile Include="Infrastructure\Session\ISessionService.cs" />
     <Compile Include="Models\LdapProviderSummaryPageSettingsModel.cs" />
     <Compile Include="Models\SavedSearchModel.cs" />
     <Compile Include="Models\SavedSearchResultsModel.cs" />
@@ -161,17 +164,17 @@
     <Compile Include="Models\Validation\ValidationResultMapper.cs" />
     <Compile Include="Models\WorkspaceModel.cs" />
     <Compile Include="RelativityServices\Exceptions\WorkspaceIdNotFoundException.cs" />
-    <Compile Include="WorkspaceIdProvider\WorkspaceIdProvider.cs" />
-    <Compile Include="WorkspaceIdProvider\IWorkspaceIdProvider.cs" />
+    <Compile Include="Context\WorkspaceIdProvider\WorkspaceIdProvider.cs" />
+    <Compile Include="Context\WorkspaceIdProvider\IWorkspaceIdProvider.cs" />
     <Compile Include="Helpers\RelativityUrlHelper.cs" />
     <Compile Include="RequestExtensions.cs" />
-    <Compile Include="ServiceContextHelperForWeb.cs" />
-    <Compile Include="InfrastructureServices\SessionService.cs" />
+    <Compile Include="IntegrationPointsServices\ServiceContextHelperForWeb.cs" />
+    <Compile Include="Infrastructure\Session\SessionService.cs" />
     <Compile Include="SignalRHubs\IntegrationPointDataHubInput.cs" />
     <Compile Include="SignalRHubs\IntegrationPointDataHub.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="WorkspaceIdProvider\Services\WebApiCustomPageService.cs" />
-    <Compile Include="WebClientFactory.cs" />
+    <Compile Include="Context\WorkspaceIdProvider\Services\WebApiCustomPageService.cs" />
+    <Compile Include="IntegrationPointsServices\WebClientFactory.cs" />
     <Compile Include="WindsorCompositionRoot.cs" />
     <Compile Include="WindsorControllerFactory.cs" />
   </ItemGroup>
