installers moved to single place

--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -72,19 +72,19 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Attributes\LogApiExceptionFilterAttribute.cs" />
     <Compile Include="Attributes\JsonNetResult.cs" />
-    <Compile Include="Context\ContextInstaller.cs" />
-    <Compile Include="Helpers\HelpersInstaller.cs" />
+    <Compile Include="Installers\ContextInstaller.cs" />
+    <Compile Include="Installers\HelpersInstaller.cs" />
     <Compile Include="Infrastructure\ExceptionLoggers\WebAPIExceptionLogger.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="IntegrationPointsServices\IntegrationPointsServicesInstaller.cs" />
+    <Compile Include="Installers\IntegrationPointsServicesInstaller.cs" />
     <Compile Include="Installers\ContainerInstaller.cs" />
     <Compile Include="IntegrationPointsServices\Logging\IWebCorrelationContextProvider.cs" />
-    <Compile Include="IntegrationPointsServices\Logging\LoggingInstaller.cs" />
-    <Compile Include="Infrastructure\InfrastructureInstaller.cs" />
-    <Compile Include="RelativityServices\RelativityServicesInstaler.cs" />
+    <Compile Include="IntegrationPointsServices\Logging\LoggingRegistration.cs" />
+    <Compile Include="Installers\InfrastructureInstaller.cs" />
+    <Compile Include="Installers\RelativityServicesInstaler.cs" />
     <Compile Include="Context\WorkspaceIdProvider\Services\IContextService.cs" />
     <Compile Include="Infrastructure\Session\SessionServiceFactory.cs" />
-    <Compile Include="Context\WorkspaceIdProvider\WorkspaceIdProviderInstaller.cs" />
+    <Compile Include="Context\WorkspaceIdProvider\WorkspaceIdProviderRegistration.cs" />
     <Compile Include="Context\WorkspaceIdProvider\Services\ControllerCustomPageService.cs" />
     <Compile Include="Controllers\API\ExportSettingsValidationController.cs" />
     <Compile Include="Controllers\API\FieldCatalogController.cs" />
